# volume-benchmarking

./: .gitignore  README.md  pyproject.toml
configs/: matrix.default.yaml  matrix.fast.yaml  matrix.smoke.yaml  runtime.default.yaml
data/: catalog_smoke_32.csv
results/manifests/: 20260228_175926.json  20260228_184355.json  20260228_190853.json  20260228_195428.json  20260228_203718.json
results/raw/: 20260228_163640.jsonl  20260228_164702.jsonl  20260228_165454.jsonl  20260228_165624.jsonl  20260228_170700.jsonl  20260228_175926.jsonl  20260228_184355.jsonl  20260228_190820.jsonl  20260228_190853.jsonl  20260228_195323.jsonl  20260228_195428.jsonl  20260228_202413.jsonl  20260228_202605.jsonl  20260228_203718.jsonl
results/summaries/: 20260228_163640.csv  20260228_163640.md  20260228_164702.csv  20260228_164702.md  20260228_165454.csv  20260228_165454.md  20260228_175926.csv  20260228_175926.md  20260228_184355.md  20260228_190820.csv  20260228_190820.md  20260228_190853.csv  20260228_190853.md  20260228_195323.csv  20260228_195323.md  20260228_195428.csv  20260228_195428.md  20260228_202413.csv  20260228_202413.md  20260228_203718.csv  20260228_203718.md  summary_20260228_185620.csv  summary_20260228_185620.md
rust/medrs_patch_bridge/: Cargo.toml
src/volume_benchmarking/: __init__.py  catalog.py  cli.py  contracts.py  geometry.py  matrix.py  (+4 more)
tests/: test_backends_contract.py  test_catalog_series_path.py  test_geometry.py  test_matrix.py  test_medrs_prepare.py  test_payload_contract.py  test_runner_summarize.py  test_rust_bridge.py  test_sanity_helpers.py
(+7 files in other folders)
